# xbyak

./: CMakeLists.txt  meson.build  readme.md  readme.txt
doc/: changelog.md
sample/: CMakeLists.txt  Makefile  README.md  cputopology.cpp  readme.md  test_util.cpp  test_util_cache.cpp
sample/cpuid/: cpuid.sh  lnl.txt  mtl.txt  ptl.txt  rpl.txt
test/: Makefile  cpumask_test  cpumask_test.cpp  make_nm.cpp
test/dataset/: amx.txt
xbyak/: xbyak.h  xbyak_mnemonic.h  xbyak_util.h
